# oneo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  corpuses.toml.example  docker-compose.yml  pyproject.toml
.factory/: README.md  factory_v2.sh
.github/workflows/: ci.yml
corpuses/billing/topics/: billing-a.md  billing-b.md  example.markdown
corpuses/engineering/: overview.md
corpuses/engineering/topics/: deployment.md  incident-response.md  oncall.md
doc/plan/: plan.md
doc/plan/demo/multi-corpus/: 01-pytest-full-suite-184-passed.txt  02-demo-sh-full-pipeline.txt  03-test-corpus-isolation-e2e.txt  04-cli-help.txt  05-corpus-list.txt  06-corpus-info-billing.txt  07-corpus-info-engineering.txt  09-validate-engineering-strict.txt  10-verify-billing.txt  11-verify-engineering.txt  HANDOVER.md  (+5 more)
knowledge/: overview.md
knowledge/topics/: billing-c.md  related.md
scripts/: demo.sh
src/oneo/: __init__.py  answering.py  cli.py  config.py  corpus.py  discovery.py  embedding.py  graph_expander.py  mcp_server.py  models.py  neo4j_store.py  okf_loader.py  pipeline.py  retriever.py  security.py  validation.py
tests/e2e/: test_corpus_isolation.py  test_filesystem_source_of_truth.py  test_mcp_e2e.py
tests/integration/: test_mcp_server_integration.py  test_neo4j_store.py  test_pipeline.py
tests/unit/: test_answering.py  test_cli.py  test_corpus.py  test_discovery.py  test_embedding.py  test_graph_expander.py  test_mcp_server.py  test_neo4j_store_run_scoped.py  test_okf_loader.py  test_retriever.py  test_security.py  test_validation.py
(+49 files in other folders)
